[package]
name = "deno_symbolizer"
authors = ["Divy Srivastava <dj.srivastava23@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
dotenv = "0.15.0"
serde = { version = "1.0.217", features = ["derive"] }
vlq = "0.5.1"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
pdb-addr2line = "0.11.1"
