[package]
name = "resym"
authors = ["Divy Srivastava <dj.srivastava23@gmail.com>"]
version = "0.1.0"
repository = "https://github.com/littledivy/resym"
edition = "2021"
description = "Serialize and symbolicate stack traces from remotely located PBD"
license = "Apache-2.0"

[lib]
path = "src/lib.rs"

[dependencies]
pdb-addr2line = "0.11.1"
