[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
thiserror = "2.0.11"
dotenv = "0.15.0"
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
resym.workspace = true
